--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "jquery": "~2.1.4",
     "underscore": "~1.8.3",
     "backbone": "~1.2.1",
-    "bootstrap": "~3.3.5"
+    "bootstrap": "~3.3.5",
+    "requirejs-text": "~2.0.14"
   }
 }
